Refactoring: 1. Remove all duplicate and unused code
