# app/schemas/classification_schemas.py
@@ -72,6 +72,8 @@ class ClassificationResultsResponse(BaseModel):
 class ConfigResponse(BaseModel):
     classification_polling_hours: int = Field(...)
     classification_polling_minutes: int = Field(...)
+    api_key: str = Field(...)
+    api_base_url: str = Field(...)
     
     class Config:
         json_encoders = {
